# cloaq-reranker

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
protos/: reranker.proto  reranker_pb2.py  reranker_pb2.pyi  reranker_pb2_grpc.py
src/reranker/: config.py  model.py  server.py  service.py
tests/: test_config.py  test_deployment.py  test_model.py  test_service.py
