[project]
name = "cloaq-reranker"
version = "0.1.0"
description = "A gRPC-based reranker service using sentence transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.73.1",
    "grpcio-health-checking==1.73.1",
    "grpcio-reflection==1.73.1",
    "grpcio-tools==1.73.1",
    "huggingface-hub==0.33.4",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.0.0",
    "torch==2.7.1",
]

[project.scripts]
cloaq-reranker = "reranker.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reranker"]

[tool.uv]
dev-dependencies = [
    "mypy==1.16.1",
    "mypy-protobuf==3.6.0",
    "types-protobuf==6.30.2.20250703",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
